--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react-dom": "16.4.2",
     "react-redux": "5.0.7",
     "redux-thunk": "^2.3.0",
-    "react-scripts":"^3.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "4.0.0",
     "react-router-dom": "^5.0.0",
     "axios": "^0.19.0"
@@ -23,5 +23,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
