--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,9 @@
     "mongoose": "^5.6.1",
     "morgan": "^1.9.1"
   },
+  "scripts": {
+    "start": "node app.js",
+    "build": "cd ../client/ && npm install && npm run build"
+  },
   "devDependencies": {}
 }
