--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "^3.0.1",
     "redux": "4.0.0",
     "react-router-dom": "^5.0.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "serve":"^11.1.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
